--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,11 @@
 fastapi==0.112.2
-uvicorn[standard]==0.30.6
+uvicorn==0.30.6
 
 # DB (Postgres)
 sqlmodel==0.0.22
 sqlalchemy==2.0.36
-psycopg2-binary==2.9.10
+psycopg2-binary==2.9.10; python_version < "3.14"
+pg8000==1.30.5; python_version >= "3.14"
 
 # Gemini
 google-genai==1.7.0
