Use page_designs landing layout; serve product_images; add Postgres seeder

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,8 @@
 HWEIBO_PROFILE=prototype
 
 # For docker-compose (backend talks to db service by default).
-DATABASE_URL=postgresql+psycopg2://hweibo:hweibo_password@db:5432/hweibo
+DATABASE_URL=postgresql://hweibo:hweibo_password@db:5432/hweibo
 
 # Gemini Developer API key (Google AI Studio).
 GEMINI_API_KEY=
 GEMINI_MODEL=gemini-flash-latest
-
