Landing page auth links + rolling product rail; add NEXT_PUBLIC_BACKEND_URL

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ DATABASE_URL=postgresql://hweibo:hweibo_password@db:5432/hweibo
 # Gemini Developer API key (Google AI Studio).
 GEMINI_API_KEY=
 GEMINI_MODEL=gemini-flash-latest
+
+# Frontend: where the backend API (and image static hosting) lives.
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
