Hweibo Base Verson

--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,27 @@ HWEIBO_PROFILE=prototype
 
 # For docker-compose (backend talks to db service by default).
 DATABASE_URL=postgresql://hweibo:hweibo_password@db:5432/hweibo
+# For local (Fedora/Ubuntu/etc) you typically want:
+# DATABASE_URL=postgresql://hweibo:hweibo_password@127.0.0.1:5432/hweibo
 
 # Gemini Developer API key (Google AI Studio).
 GEMINI_API_KEY=
 GEMINI_MODEL=gemini-flash-latest
 
+# Protect AI endpoints in real mode (shared secret between frontend and backend / gateway).
+# Send it as either:
+# - `Authorization: Bearer <key>` OR
+# - `X-Hweibo-Api-Key: <key>`
+HWEIBO_API_KEY=
+
 # Frontend: where the backend API (and image static hosting) lives.
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+
+# If you run the frontend, put these in `frontend/.env.local`:
+# NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+# HWEIBO_API_KEY=...   # only needed when backend runs with HWEIBO_PROFILE=real
+
+# Optional tuning / diagnostics
+LOG_LEVEL=INFO
+HWEIBO_AI_CANDIDATE_LIMIT=60
+HWEIBO_AI_CATALOG_FETCH_LIMIT=200
